2005-11-18   Ping Cheng <pingc@wacom.com>
	*  Fixed a wacomcpl and an X driver bug

2005-11-17   Ping Cheng <pingc@wacom.com>
	* Updated wacomcpl
	* Updated wacom.c and xsetwacom

2005-11-14   Ping Cheng <pingc@wacom.com>
	* Updated xidump
	* Support 2.6.14
	* Updated acinclude.m4 (Radomir Dopieralski)
	* Check tool serial number configured in xorg.conf/XF86Config 
	* Report tool id and serial number in 4th-6th valuators

2005-11-02   Ping Cheng <pingc@wacom.com>
	* linuxwacom-0.7.1 Released as beta

2005-10-26   Ping Cheng <pingc@wacom.com>
	* Updated wacdump and xidump
	* Support 2.6.x without EV_SYN defined

2005-10-20   Ping Cheng <pingc@wacom.com>
	* Updated configure options (added --with-x-src)
	* Added Device ID info for USB and P4 tablets 
	* Support 2.6.13

2005-10-11    Ping Cheng <pingc@wacom.com>
	* Added DTU710, DTF 720 and Graphire 4

2005-09-21    Ping Cheng <pingc@wacom.com>
	* linuxwacom-0.7.0 Released

2005-09-19    Ping Cheng <pingc@wacom.com>
	* Fixed a serial Graphire bug

2005-09-16    Ping Cheng <pingc@wacom.com>
	* Fixed a P4 eraser bug
	* Fixed an initial relative pressure bug (Fred)
	* Reports USB tool ID

2005-09-09    Ping Cheng <pingc@wacom.com>
	* Supports 16 button events for all tools
	* Merged TabletPC button1 patch from Brent Baccala

2005-09-07    Ping Cheng <pingc@wacom.com>
	* Updated wacdump for Cintiq 21UX
	* Updated docs.html
	* Updated acinclude.m4 to deal with version checking, 
		such as 2.6.12.4 (Tim Jedlicka)

2005-08-18    Ping Cheng <pingc@wacom.com>
	* Merged patches for Volito2 and PL700
	* Updated wacomcpl and configure.in

2005-08-09    Ping Cheng <pingc@wacom.com>
	* Fxied a dlloader option bug (Jeremy Huddleston) 

2005-08-08    Ping Cheng <pingc@wacom.com>
	* Added --enable-dlloader configuration option
	* Cleaned Graphire wacom.c code
	* Cleaned relative Convert/revConvert X code
	* Released linuxwacom-0.6.9 as beta

2005-07-28    Ping Cheng <pingc@wacom.com>